# tic-tac-toe

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: conftest.py  test_board.py  test_game.py  test_player.py
tic_tac_toe/: __main__.py  game.py
tic_tac_toe/board/: board.py  cell.py  mappings.py  player_id.py
tic_tac_toe/players/: players.py  user_player.py
