[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = "Tic-Tac-Toe Game"
authors = ["diogoje <djeronimocondep@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
ruff = "^0.1.14"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T20"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/test*.py" = ["S101", "SLF001"]
